Grid - fix low-res covers layering incorrectly
Also switch covers to "cover" size. When set to "contain", the low-res covers are shown below the high-res covers and it looks terrible.

--- a/Grid/Grid.css
+++ b/Grid/Grid.css
@@ -1,7 +1,7 @@
 /* List design by 5cm */
 /* https://myanimelist.net/forum/?topicid=1099375&show=350#msg58794999 */
 /* Modified by Valerio Lyndon */
-/* Last modification: 2022-SEP-13 */
+/* Last modification: 2022-SEP-18 */
 
 @\import "https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700";
 
@@ -298,13 +298,15 @@ a:link, a:active, a:visited {color: var(--c-text);}
 	color: var(--c-text-subdued); opacity: 0;}
 
 .list-table .list-table-data .data.image a {
-	width: 200px; height: 280px; background-size: contain; background-position: center; background-repeat: no-repeat;}
+	width: 200px; height: 280px; background-size: cover; background-position: center;}
 
 .list-table .list-table-data .data.image .image {
+	position: relative;
+	z-index: -1;
 	width: 100%;
 	height: 100%;
 	border: none;
-	object-fit: contain;
+	object-fit: cover;
 }
 
 .list-table .list-table-data .data a, .list-table .list-table-data a.edit-disabled {
